[bdist_wheel]
universal = 1

[metadata]
name = nvme-spex
description = extract data structures from docx/HTML specification
version = attr: spex.__version__
author = Jesper Wendel Devantier
author_email = j.devantier@samsung.com
maintainer = Jesper Wendel Devantier
maintainer_email = j.devantier@samsung.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT

[options]
requires_python = >=3.11
setup_requires =
  wheel
install_requires =
  lxml>=4.9.2,<5.0
  lxml-stubs>=0.4.0,<0.5
  loguru>=0.6,<0.8
  gcgen

zip_safe = False
packages = find:
package_dir=
  =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  spex = spex.__main__:main
